<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/person"
                    android:title="@string/menu_profile"
                    />

                <item
                    android:id="@+id/nav_map"
                    android:icon="@drawable/pin"
                    android:title="@string/menu_map"
                    />
                <item
                    android:id="@+id/nav_search"
                    android:icon="@drawable/search"
                    android:title="@string/menu_search"
                    />
                <item
                    android:id="@+id/nav_applications"
                    android:icon="@drawable/application"
                    android:title="@string/menu_applications"
                    />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout"
                    android:title="@string/menu_logout"
                    android:onClick="logout"
                    />
        </group>
</menu>