<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:padding="20dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:id="@+id/user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/border_radius"
            >

            <TextView
                android:id="@+id/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotobold"
                android:text="Nombres + Apellidos / Empresa"
                android:textColor="@color/black"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/rut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoregular"
                android:text="@string/rut_e"
                android:textSize="22dp"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/correo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoregular"
                android:text="@string/mail"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoregular"
                android:text="@string/phone"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/birth_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoregular"
                android:text="Fecha nacimiento / Direccion"
                android:textSize="20dp" />

            <ImageButton
                android:id="@+id/btn_edit_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"

                android:backgroundTint="@color/orange_one"
                android:src="@android:drawable/ic_menu_edit" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/jobs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_info"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:layout_marginVertical="20dp"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/robotobold"
                android:text="Avisos publicados"
                android:textColor="@color/black"
                android:textSize="24dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/jobs_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addJob"
            app:elevation="0dp"
            app:borderWidth="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/orange_one"
            app:tint="@android:color/white"
            android:clickable="true"
            android:src="@android:drawable/ic_input_add" />

    </RelativeLayout>

</FrameLayout>